--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "lucide-react": "^0.274.0",
     "next": "^13.5.4-canary.7",
     "next-cloudinary": "^4.22.0",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
+    "react-spinners": "^0.13.8",
     "recharts": "^2.9.3",
     "stripe": "^14.3.0",
     "tailwind-merge": "^1.14.0",
