--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.274.0",
     "next": "^13.5.4-canary.7",
+    "next-auth": "^4.24.5",
     "next-cloudinary": "^4.22.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
@@ -53,6 +57,9 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "prisma": "^5.2.0"
   }
 }
